# scaleTrail

./: .gitignore  README.md
[project]/: outputs.tf  terraform.tfvars
[project]/django/: .env.example  .gitignore
[project]/django/docker/: Dockerfile  dev.docker-compose.yml  docker-compose.http-reverse-proxy.yml  docker-compose.reverse-proxy.yml  docker-compose.yml  local.Dockerfile  local.docker-compose.yml  prod.docker-compose.yml
[project]/django/scaletrail_project/: manage.py
[project]/django/scaletrail_project/scaletrail_project/: asgi.py  settings.py  urls.py  wsgi.py
[project]/terraform/: main.tf  variables.tf
cli/: .gitignore  pyproject.toml
cli/scaletrail/: cli.py
cli/scaletrail/utils/: cloudflare.py  env_file.py  formatting.py  linode.py
